# Construction-C

./: .gitignore  CMakeLists.txt  main.c  main.h  out.bc  util.c  util.h
cmake/Modules/: FindLLVM.cmake  FindLibedit.cmake
lib-construction/: test.cn
